# RecipeMgmt

./: README.md  app.py  pyproject.toml  resources.py
tests/: recipe_mgmt_tests.py
