[project]
name = "recipe-mgmt"
version = "0.1.0"
description = ""
authors = [
    {name = "Sean Flaherty",email = "sean.flaherty@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "recipe_mgmt", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
